<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_battle">

    <fragment
        android:id="@+id/navigation_battle"
        android:name="com.example.binarchapter7.main.ui.battle.BattleFragment"
        android:label="@string/battle"
        tools:layout="@layout/fragment_battle">
        <argument android:name="username"
            app:argType="string"
            android:defaultValue="empty"/>
    </fragment>


    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.binarchapter7.main.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.binarchapter7.main.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profil">
        <argument android:name="username"
            app:argType="string"
            android:defaultValue="empty"/>
        <argument android:name="email"
            app:argType="string"
            android:defaultValue="empty"/>
    </fragment>
</navigation>